@@ -1,4 +1,4 @@
-/* $Id: openbsd-compat.h,v 1.27 2005/05/26 10:48:25 djm Exp $ */
+/* $Id: openbsd-compat.h,v 1.28 2005/06/09 11:45:11 dtucker Exp $ */
 
 /*
  * Copyright (c) 1999-2003 Damien Miller.  All rights reserved.
@@ -167,6 +167,9 @@ char *shadow_pw(struct passwd *pw);
 
 /* rfc2553 socket API replacements */
 #include "fake-rfc2553.h"
+
+/* compatibility with old or broken OpenSSL versions */
+#include "openssl-compat.h"
 
 /* Routines for a single OS platform */
 #include "bsd-cray.h"
